Completed oil step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 100,
    "metadata": {
     "scrolled": true
    },
@@ -1550,9 +1550,57 @@
        "      <td>1110</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008-09-01</td>\n",
+       "      <td>3974</td>\n",
+       "      <td>21</td>\n",
+       "      <td>681</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>587</td>\n",
+       "      <td>88</td>\n",
+       "      <td>242</td>\n",
+       "      <td>67</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>186</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>144</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>1055</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008-10-01</td>\n",
+       "      <td>4738</td>\n",
+       "      <td>21</td>\n",
+       "      <td>716</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>586</td>\n",
+       "      <td>86</td>\n",
+       "      <td>803</td>\n",
+       "      <td>66</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>185</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>145</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 36 columns</p>\n",
+       "<p>5 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1560,39 +1608,42 @@
        "0 2008-06-01             5138       21     655        17        0         583   \n",
        "1 2008-07-01             5177       21     640        17        0         586   \n",
        "2 2008-08-01             5003       21     544        17        0         588   \n",
+       "3 2008-09-01             3974       21     681        16        0         587   \n",
+       "4 2008-10-01             4738       21     716        17        0         586   \n",
        "\n",
        "   Colorado  Federal Offshore Gulf of Mexico Crude Oil  \\\n",
        "0        82                                       1326   \n",
        "1        81                                       1372   \n",
        "2        82                                       1272   \n",
+       "3        88                                        242   \n",
+       "4        86                                        803   \n",
        "\n",
        "   Federal Offshore Pacific Crude Oil  ...  Ohio  Oklahoma  Pennsylvania  \\\n",
        "0                                  67  ...    14       186             8   \n",
        "1                                  61  ...    14       184             8   \n",
        "2                                  70  ...    14       188             8   \n",
+       "3                                  67  ...    14       186             8   \n",
+       "4                                  66  ...    14       185             8   \n",
        "\n",
        "   South Dakota  Wyoming  West Virginia  Virginia  Utah  Texas  Tennessee  \n",
        "0             5      144              6         0    60   1097          1  \n",
        "1             5      145              5         0    61   1111          1  \n",
        "2             5      145              6         0    62   1110          1  \n",
+       "3             5      144              6         0    63   1055          1  \n",
+       "4             5      145              6         0    64   1125          1  \n",
        "\n",
-       "[3 rows x 36 columns]"
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = \"data/U.S._crude_oil_production.csv\"\n",
-    "\n",
-    "\n",
-    "oil_df = pd.read_csv(file, decimal=\",\")\n",
-    "oil_df.head(3)\n",
-    "oil_df['Month'] = pd.to_datetime(oil_df['Month'])\n",
-    "filtered_yearly_oil_df = yearly_oil_df[np.logical_and(yearly_oil_df.index > 2008, yearly_oil_df.index < 2018)]\n",
-    "oil_df.head(3)"
+    "oil_df = pd.read_csv(file, parse_dates=['Month'])\n",
+    "oil_df.head()"
    ]
   },
   {
@@ -1606,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1847,20 +1898,19 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_yearly_oil_df = yearly_oil_df[np.logical_and(yearly_oil_df.index > 2008, yearly_oil_df.index < 2018)]\n",
     "yearly_oil_df = oil_df.groupby(oil_df['Month'].dt.year).sum()\n",
     "yearly_oil_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 97,
    "metadata": {
     "scrolled": true
    },
@@ -1882,7 +1932,7 @@
       "test_oil.py::TestOil::test_df_has_the_right_shape \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 66%]\u001b[0m\n",
       "test_oil.py::TestOil::test_df_has_the_right_values \u001b[32mPASSED\u001b[0m\u001b[32m                [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 0.12s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 0.13s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -1911,25 +1961,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master e5daac0] Completed oil step\n",
-      " 3 files changed, 50 insertions(+), 36 deletions(-)\n",
-      " create mode 100644 tests/oil.pickle\n",
-      "Enumerating objects: 10, done.\n",
-      "Counting objects: 100% (10/10), done.\n",
+      "[master dad984e] Completed oil step\n",
+      " 1 file changed, 146 insertions(+), 129 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 1.61 KiB | 825.00 KiB/s, done.\n",
-      "Total 6 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 2.15 KiB | 734.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
-      "   166d7b5..e5daac0  master -> master\n"
+      "   e5daac0..dad984e  master -> master\n"
      ]
     }
    ],
@@ -1950,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2065,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [80], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m filtered_yearly_oil_df \u001b[38;5;241m=\u001b[39m yearly_oil_df[np\u001b[38;5;241m.\u001b[39mlogical_and(yearly_oil_df\u001b[38;5;241m.\u001b[39mindex \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m2008\u001b[39m, yearly_oil_df\u001b[38;5;241m.\u001b[39mindex \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m2018\u001b[39m)]\n\u001b[1;32m      5\u001b[0m total_oil \u001b[38;5;241m=\u001b[39m filtered_yearly_oil_df\u001b[38;5;241m.\u001b[39mfilter(items\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mU.S. Crude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtotal_oil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m \u001b[38;5;241m=\u001b[39m [ \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCrude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m ]\n\u001b[1;32m      7\u001b[0m total_oil\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m)\n",
+      "Cell \u001b[0;32mIn [99], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m display(total_gas\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m))\n\u001b[1;32m      5\u001b[0m total_oil \u001b[38;5;241m=\u001b[39m filtered_yearly_oil_df\u001b[38;5;241m.\u001b[39mfilter(items\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mU.S. Crude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m \u001b[43mtotal_oil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m \u001b[38;5;241m=\u001b[39m [ \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCrude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m ]\n\u001b[1;32m      7\u001b[0m total_oil\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m)\n",
       "File \u001b[0;32m~/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/pandas/core/generic.py:5588\u001b[0m, in \u001b[0;36mNDFrame.__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   5586\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   5587\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\n\u001b[0;32m-> 5588\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__setattr__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   5589\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[1;32m   5590\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
       "File \u001b[0;32m~/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/pandas/_libs/properties.pyx:70\u001b[0m, in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32m~/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/pandas/core/generic.py:769\u001b[0m, in \u001b[0;36mNDFrame._set_axis\u001b[0;34m(self, axis, labels)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_set_axis\u001b[39m(\u001b[38;5;28mself\u001b[39m, axis: \u001b[38;5;28mint\u001b[39m, labels: Index) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    768\u001b[0m     labels \u001b[38;5;241m=\u001b[39m ensure_index(labels)\n\u001b[0;32m--> 769\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mgr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    770\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_clear_item_cache()\n",
@@ -2030,7 +2079,7 @@
     "total_gas = filtered_yearly_gas_df.filter(items=['U.S.'])\n",
     "total_gas.columns = [ 'Gas' ]\n",
     "display(total_gas.head(3))\n",
-    "filtered_yearly_oil_df = yearly_oil_df[np.logical_and(yearly_oil_df.index > 2008, yearly_oil_df.index < 2018)]\n",
+    "\n",
     "total_oil = filtered_yearly_oil_df.filter(items=['U.S. Crude Oil'])\n",
     "total_oil.columns = [ 'Crude Oil' ]\n",
     "total_oil.head(3)"
@@ -2038,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2168,7 @@
        "2017  1090730"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
